syntax = "proto3";

package user;

option go_package = "user_service/proto;proto";

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string role = 5;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string message = 1;
  string token = 2;
  string user_id = 3;
  string role = 4;
}


message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
